# Document-Analysis

./: .gitignore  README.md  dataset.py  inference.py  main.py  metrics.py  paper_implementation.py  preprocess.py  pyproject.toml  test.py  train.py  utils.py
