[project]
name = "part2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.9",
    "opencv-python>=4.11.0.86",
    "patchify>=0.2.3",
    "pillow>=12.2.0",
    "scikit-image>=0.26.0",
    "scipy>=1.17.1",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
    "tqdm>=4.67.3",
]
